--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vant": "^2.12.1",
+    "vant": "^2.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -50,7 +50,9 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "semi": [0]
+      "semi": [
+        0
+      ]
     }
   },
   "browserslist": [
