--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.0",
+    "lodash": "^4.17.20",
     "vant": "^2.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
